--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <title>Beatrice Vaienti - PhD Student & Researcher</title>
     <style>
-        /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
             color: #333;
+            background-color: #f8f8f8; /* Light background */
         }
-        .header, .footer {
-            background-color: #f1f1f1;
+        .header {
+            background-color: #6fbaed; /* Vibrant header color */
             padding: 20px;
             text-align: center;
         }
@@ -33,6 +31,7 @@
         }
         .section {
             padding: 20px;
+            text-align: center;
         }
         /* Add more styles as per your design */
     </style>
@@ -42,6 +41,7 @@
 <div class="header">
     <h1>Beatrice Vaienti</h1>
     <p>PhD Student & Researcher</p>
+    <!-- Optional: Add your photo here -->
 </div>
 
 <div class="navigation">
@@ -52,17 +52,17 @@
 </div>
 
 <div class="section" id="bio">
-    <h2>Bio</h2>
+    <h2>About Me</h2>
     <p><!-- Your bio goes here --></p>
 </div>
 
 <div class="section" id="cv">
-    <h2>CV</h2>
+    <h2>My CV</h2>
     <p><!-- Summary of your CV or a link to download --></p>
 </div>
 
 <div class="section" id="projects">
-    <h2>Projects</h2>
+    <h2>My Projects</h2>
     <!-- Insert your projects with images and descriptions here -->
 </div>
 
