--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Beatrice Vaienti - PhD Student & Researcher</title>
+    <title>Beatrice Vaienti - PhD Student @ DHLAB, EPFL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
