--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!-- Each section should have a .section-light class and contain a .gallery for projects -->
 
 <div class="footer">
-    <p>&copy; 2023 Beatrice Vaienti.</p>
+    <p>&copy; 2023 Beatrice Vaienti. All Rights Reserved.</p>
 </div>
 
 </body>
