--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 <body>
 
 <div class="header">
-    <h1>Hello, I'm Beatrice.</h1>
-    <p>I'm a PhD Student in Digital Humanities.</p>
+    <h1 id="header-title"></h1>
+    <p id="header-subtitle"></p>
 </div>
 
 <div class="navigation">
@@ -110,6 +110,23 @@
 <div class="footer">
     <p>&copy; 2023 Beatrice Vaienti. All Rights Reserved.</p>
 </div>
+    
+    <!-- JavaScript to load content from JSON -->
+    <script>
+        fetch('content.json')
+        .then(response => response.json())
+        .then(data => {
+            // Inject header content
+            document.getElementById('header-title').textContent = data.header.title;
+            document.getElementById('header-subtitle').textContent = data.header.subtitle;
 
+            // Inject other content throughout the page
+            // ...
+
+        })
+        .catch(error => {
+            console.error('Error fetching content:', error);
+        });
+    </script>
 </body>
 </html>
