--- a/index.html
+++ b/index.html
@@ -2,99 +2,82 @@
 <html>
 <head>
     <title>Beatrice Vaienti - PhD Student @ DHLAB, EPFL</title>
-    <!-- Style and head content -->
-</head>
-<body>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
 
-<div class="header">
-    <h1 id="header-title"></h1>
-    <p id="header-subtitle"></p>
-</div>
+        *, *:before, *:after {
+            box-sizing: border-box;
+        }
+        body, h1, h2, p, a {
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+        }
 
-<div class="navigation">
-    <a href="#work" id="navigation-work">Work</a>
-    <a href="#about" id="navigation-about">About</a>
-    <!-- Add other navigation links as needed -->
-</div>
+        body {
+            background: linear-gradient(135deg, #EF629F 0%, #EECDA3 100%);
+            color: #333;
+            line-height: 1.6;
+        }
 
-<div class="section" id="bio">
-    <div class="section-light">
-        <h2 id="about-title"></h2>
-        <p id="about-description"></p>
-    </div>
-</div>
+        .header h1, .header p {
+            font-family: 'DM Serif Display', serif;
+            color: white;
+        }
 
-<div class="section" id="cv">
-    <div class="section-light">
-        <h2 id="cv-title"></h2>
-        <p id="cv-summary"></p>
-    </div>
-</div>
+        .navigation {
+            background-color: transparent;
+            color: white;
+            overflow: hidden;
+            padding: 10px 0;
+            text-align: right;
+        }
+        .navigation a {
+            display: inline-block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: 700;
+        }
+        .navigation a:hover {
+            color: #EF629F;
+        }
 
-<div class="section" id="projects">
-    <div class="section-light">
-        <h2>My Projects</h2>
-        <div class="gallery" id="projects-gallery">
-            <!-- Projects will be inserted here -->
-        </div>
-    </div>
-</div>
+        .section {
+            padding: 20px;
+            text-align: center;
+        }
+        .section-light {
+            background-color: rgba(255, 255, 255, 0.8);
+            margin: 20px;
+            padding: 40px;
+            border-radius: 10px;
+        }
 
-<div class="section" id="contact">
-    <div class="section-light">
-        <h2>Contact Me</h2>
-        <p id="contact-prompt"></p>
-        <!-- Contact form elements -->
-    </div>
-</div>
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .gallery-item {
+            margin: 10px;
+            background: #fff;
+            border-radius: 10px;
+            overflow: hidden;
+            transition: transform 0.3s ease;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+        }
+        .gallery-item:hover {
+            transform: translateY(-5px);
+        }
+        .gallery-image {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
 
-<div class="footer">
-    <p id="footer-copyright"></p>
-</div>
-
-<script>
-    fetch('content.json')
-    .then(response => response.json())
-    .then(data => {
-        // Header
-        document.getElementById('header-title').textContent = data.header.title;
-        document.getElementById('header-subtitle').textContent = data.header.subtitle;
-
-        // Navigation (if required)
-        // document.getElementById('navigation-work').textContent = 'Work'; // Text is static, as it's just a label
-        // document.getElementById('navigation-about').textContent = 'About'; // Text is static, as it's just a label
-
-        // About section
-        document.getElementById('about-title').textContent = data.about.title;
-        document.getElementById('about-description').textContent = data.about.description;
-
-        // CV section
-        document.getElementById('cv-title').textContent = data.cv.title;
-        document.getElementById('cv-summary').textContent = data.cv.summary;
-
-        // Projects section
-        const projectsGallery = document.getElementById('projects-gallery');
-        data.projects.forEach(project => {
-            const projectItem = document.createElement('div');
-            projectItem.className = 'gallery-item';
-            projectItem.innerHTML = `
-                <img class="gallery-image" src="${project.image}" alt="${project.title}">
-                <p>${project.title}</p>
-                <p>${project.description}</p>
-            `;
-            projectsGallery.appendChild(projectItem);
-        });
-
-        // Contact section
-        document.getElementById('contact-prompt').textContent = data.contact.prompt;
-
-        // Footer
-        document.getElementById('footer-copyright').textContent = data.footer.copyright;
-    })
-    .catch(error => {
-        console.error('Error fetching content:', error);
-    });
-</script>
-
-</body>
-</html>
+        .footer {
+            background-color: #EF629F;
