--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
             font-family: 'DM Serif Display', serif;
             color: white;
         }
-
+            .header h1 {
+        font-family: 'DM Serif Display', serif;
+        color: white;
+        text-align: center;
+        font-size: 48px; /* Example size, adjust as needed */
+        margin-top: 40px; /* Add some spacing at the top */
+        }
+        .header p {
+            font-family: 'DM Serif Display', serif;
+            color: white;
+            text-align: center;
+            font-size: 24px; /* Example size, adjust as needed */
+            margin-bottom: 40px; /* Add some spacing at the bottom */
+        }
         .navigation {
             background-color: transparent;
             color: white;
