--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
         *, *:before, *:after {
             box-sizing: border-box;
         }
+            body, html {
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto', sans-serif;
+        }
+        .header {
+            position: fixed; /* Fixed position */
+            width: 100%; /* Header will occupy the full width */
+            z-index: 10; /* Ensure the header is above other content */
+            background: linear-gradient(135deg, #EF629F 0%, #EECDA3 100%);
+            padding: 20px 0; /* Adjust padding as needed */
+        }
         body, h1, h2, p, a {
             margin: 0;
             padding: 0;
@@ -29,15 +41,15 @@
         font-family: 'DM Serif Display', serif;
         color: white;
         text-align: center;
-        font-size: 48px; /* Example size, adjust as needed */
-        margin-top: 40px; /* Add some spacing at the top */
+        font-size: 96px; /* Example size, adjust as needed */
+        margin-top: 80px; /* Add some spacing at the top */
         }
         .header p {
             font-family: 'DM Serif Display', serif;
             color: white;
             text-align: center;
-            font-size: 24px; /* Example size, adjust as needed */
-            margin-bottom: 40px; /* Add some spacing at the bottom */
+            font-size: 48px; /* Example size, adjust as needed */
+            margin-bottom: 80px; /* Add some spacing at the bottom */
         }
         .navigation {
             background-color: transparent;
