--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             position: fixed; /* Fixed position */
             width: 100%; /* Header will occupy the full width */
             z-index: 10; /* Ensure the header is above other content */
-            background: linear-gradient(135deg, #EF629F 0%, #EECDA3 100%);
+            background: linear-gradient(135deg, #FF61D2 0%, #FE9090 100%);
             padding: 20px 0; /* Adjust padding as needed */
         }
         body, h1, h2, p, a {
@@ -28,7 +28,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #EF629F 0%, #EECDA3 100%);
+            background: linear-gradient(135deg, #FF61D2 0%, #FE9090 100%); 
             color: #333;
             line-height: 1.6;
         }
@@ -37,12 +37,12 @@
             font-family: 'DM Serif Display', serif;
             color: white;
         }
-            .header h1 {
-        font-family: 'DM Serif Display', serif;
-        color: white;
-        text-align: center;
-        font-size: 96px; /* Example size, adjust as needed */
-        margin-top: 80px; /* Add some spacing at the top */
+        .header h1 {
+            font-family: 'DM Serif Display', serif;
+            color: white;
+            text-align: center;
+            font-size: 96px; /* Example size, adjust as needed */
+            margin-top: 80px; /* Add some spacing at the top */
         }
         .header p {
             font-family: 'DM Serif Display', serif;
