--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
         *, *:before, *:after {
             box-sizing: border-box;
         }
+
         body, html {
             margin: 0;
             padding: 0;
             font-family: 'Roboto', sans-serif;
             background: linear-gradient(135deg, #C6EA8D 0%, #FE90AF 100%);
+            background-attachment: fixed; /* Fixed background */
             color: #333;
             line-height: 1.6;
-            padding-top: 160px; /* Adjust as needed for header height */
         }
 
         .header {
-            position: fixed;
+            position: fixed; /* Fixed header */
             top: 0;
             left: 0;
             width: 100%;
-            z-index: 1000;
-            background: linear-gradient(135deg, #C6EA8D 0%, #FE90AF 100%);
+            z-index: 1000; /* Higher z-index so content scrolls under it */
+            background: linear-gradient(135deg, #C6EA8D 0%, #FE90AF 100%); /* Same gradient for continuity */
             padding: 20px 0;
         }
 
@@ -49,7 +50,12 @@
             overflow: hidden;
             padding: 10px 0;
             text-align: right;
+            position: fixed;
+            width: 100%;
+            top: 120px; /* Adjust based on header height */
+            z-index: 1000;
         }
+
         .navigation a {
             display: inline-block;
             color: white;
@@ -59,14 +65,22 @@
             text-transform: uppercase;
             font-weight: 700;
         }
+
         .navigation a:hover {
             color: #EF629F;
+        }
+
+        .main-content {
+            position: relative;
+            z-index: 2;
+            padding-top: 200px; /* Adjust according to header and navigation height */
         }
 
         .section {
             padding: 20px;
             text-align: center;
         }
+
         .section-light {
             background-color: rgba(255, 255, 255, 0.8);
             margin: 20px;
@@ -79,6 +93,7 @@
             flex-wrap: wrap;
             justify-content: center;
         }
+
         .gallery-item {
             margin: 10px;
             background: #fff;
@@ -87,9 +102,11 @@
             transition: transform 0.3s ease;
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
         }
+
         .gallery-item:hover {
             transform: translateY(-5px);
         }
+
         .gallery-image {
             width: 100%;
             height: auto;
@@ -102,95 +119,60 @@
             padding: 20px;
             text-align: center;
         }
-
     </style>
 </head>
 <body>
 
 <div class="header">
-    <h1 id="header-title"></h1>
-    <p id="header-subtitle"></p>
+    <h1 id="header-title">Beatrice Vaienti</h1>
+    <p id="header-subtitle">PhD Student @ DHLAB, EPFL</p>
 </div>
 
 <div class="navigation">
-    <a href="#work" id="navigation-work">Work</a>
-    <a href="#about" id="navigation-about">About</a>
-    <!-- Add other navigation links as needed -->
+    <a href="#bio" id="navigation-about">About</a>
+    <a href="#cv" id="navigation-cv">CV</a>
+    <a href="#projects" id="navigation-projects">Projects</a>
+    <a href="#contact" id="navigation-contact">Contact</a>
 </div>
 
-<div class="section" id="bio">
-    <div class="section-light">
-        <h2 id="about-title"></h2>
-        <p id="about-description"></p>
+<div class="main-content">
+    <div class="section" id="bio">
+        <div class="section-light">
+            <h2>About Me</h2>
+            <p>Information about Beatrice Vaienti...</p>
+        </div>
     </div>
-</div>
 
-<div class="section" id="cv">
-    <div class="section-light">
-        <h2 id="cv-title"></h2>
-        <p id="cv-summary"></p>
+    <div class="section" id="cv">
+        <div class="section-light">
+            <h2>My CV</h2>
+            <p>Details about my academic and professional background...</p>
+        </div>
     </div>
-</div>
 
-<div class="section" id="projects">
-    <div class="section-light">
-        <h2>My Projects</h2>
-        <div class="gallery" id="projects-gallery">
-            <!-- Projects will be inserted here -->
+    <div class="section" id="projects">
+        <div class="section-light">
+            <h2>My Projects</h2>
+            <div class="gallery">
+                <!-- Insert project items here -->
+            </div>
+        </div>
+    </div>
+
+    <div class="section" id="contact">
+        <div class="section-light">
+            <h2>Contact Me</h2>
+            <p>How to get in touch...</p>
         </div>
     </div>
 </div>
 
-<div class="section" id="contact">
-    <div class="section-light">
-        <h2>Contact Me</h2>
-        <p id="contact-prompt"></p>
-        <!-- Contact form elements -->
-    </div>
-</div>
-
 <div class="footer">
-    <p id="footer-copyright"></p>
+    <p>&copy; 2023 Beatrice Vaienti. All rights reserved.</p>
 </div>
 
 <script>
-    fetch('content.json')
-    .then(response => response.json())
-    .then(data => {
-        // Header
-        document.getElementById('header-title').textContent = data.header.title;
-        document.getElementById('header-subtitle').textContent = data.header.subtitle;
-
-        // About section
-        document.getElementById('about-title').textContent = data.about.title;
-        document.getElementById('about-description').textContent = data.about.description;
-
-        // CV section
-        document.getElementById('cv-title').textContent = data.cv.title;
-        document.getElementById('cv-summary').textContent = data.cv.summary;
-
-        // Projects section
-        const projectsGallery = document.getElementById('projects-gallery');
-        data.projects.forEach(project => {
-            const projectItem = document.createElement('div');
-            projectItem.className = 'gallery-item';
-            projectItem.innerHTML = `
-                <img class="gallery-image" src="${project.image}" alt="${project.title}">
-                <p>${project.title}</p>
-                <p>${project.description}</p>
-            `;
-            projectsGallery.appendChild(projectItem);
-        });
-
-        // Contact section
-        document.getElementById('contact-prompt').textContent = data.contact.prompt;
-
-        // Footer
-        document.getElementById('footer-copyright').textContent = data.footer.copyright;
-    })
-    .catch(error => {
-        console.error('Error fetching content:', error);
-    });
+    // JavaScript for dynamic content loading (if needed)
 </script>
 
 </body>
