--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            z-index: 1000; /* Higher z-index so content scrolls under it */
+            z-index: 0; /* Lower z-index so content scrolls over it */
             padding: 20px 0;
         }
 
