--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             padding: 0; /* Removed the 80px padding */
             font-family: 'Roboto', sans-serif;
             background: #ED4264;  /* fallback for old browsers */
-            background: -webkit-linear-gradient(to bottom, #FFEDBC, #ED4264);  /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to bottom, #FFEDBC, #ED4264); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: -webkit-linear-gradient(45deg, #FFEDBC, #ED4264);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(45deg, #FFEDBC, #ED4264); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             color: #333;
             line-height: 1.6;
         }
@@ -41,6 +41,7 @@
 
         .header p {
             font-size: 48px;
+            transform: translateY(-20px);
         }
 
         .navigation {
