--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             color: white;
             overflow: hidden;
             padding: 10px 0;
+            margin-right: 50px;
             text-align: right;
             position: fixed;
             width: 100%;
@@ -114,7 +115,7 @@
         }
 
         .footer {
-            background-color: #EF629F;
+            background-color: #ED4264;
             color: white;
             padding: 20px;
             text-align: center;
