--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             margin: 20px;
             padding: 40px;
             border-radius: 10px;
+            box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2); /* Adding shadow */
         }
 
         .gallery {
