--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             text-align: right;
             position: fixed;
             width: 100%;
-            top: 180px; /* Adjusted based on header height */
+            top: 80px; /* Adjusted based on header height */
+            right: 10px;
             z-index: 10; /* Higher z-index for navigation */
         }
 
